--- a/.github/workflows/build-listing.yml
+++ b/.github/workflows/build-listing.yml
@@ -27,7 +27,7 @@ jobs:
     name: build-listing
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      url: ${{ steps.deployment.outputs.page_url }} #ここ変えなきゃいけない
     runs-on: ubuntu-latest
     steps:
       
